tests/suite/snapshots/suite__check__tests__check__bad_generic_9.xi.snap
---
source: tests/suite/check.rs
assertion_line: 34
expression: Snapshot(checked)
---
Error: Semantic error
   ╭─[tests/check/bad_generic_9.xi:4:11]
   │
 4 │     foo::<A>()
   ·           ┬  
   ·           ╰── Unbound class A
───╯

